Cleaned up some of the warnings to make the code safer.